--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ ul {
 
 .page-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 2rem;
     flex-wrap: wrap;
 }
